--- a/src/components/AppointmentCard/AppoinmentCardStyles.scss
+++ b/src/components/AppointmentCard/AppoinmentCardStyles.scss
@@ -1,6 +1,6 @@
-@use '../../../colors/systemColors' as sysColors;
+@use '../../colors/systemColors' as sysColors;
 
-.client-appointment-card {
+.appointment-card {
   background-color: sysColors.$card-bg-color;
   border-radius: 8px;
   padding: 15px;
@@ -9,7 +9,6 @@
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   width: 370px;
   margin: 8px;
-  text-align: left;
   cursor: pointer;
 
   .profile-img {
@@ -27,7 +26,7 @@
 
   .details {
     width: 65%;
-    padding: 10px;
+    padding: 7px;
 
     .consultant-name {
       font-size: 1.2rem;
