--- a/src/pages/DashBoard/CounselorDashBoard/CounselorDashBoardStyles.scss
+++ b/src/pages/DashBoard/CounselorDashBoard/CounselorDashBoardStyles.scss
@@ -2,10 +2,11 @@
 
 .counselor-dashboard-container {
   width: 100%;
+  height: 100%;
   padding-left: 80px;
   padding-right: 80px;
-  margin-bottom: 10px;
   padding-top: 85px;
+  padding-bottom: 50px;
   box-sizing: border-box;
   background-color: sysColors.$primary-bg-color;
 
